gobmkida/c2/fastlib
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/fastlib/src/engine/board.c:1946:24: error: use of undeclared identifier 'byte_9B389F'
v8 = ( unsigned __int8)byte_9B389F[pos]; 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/fastlib/src/engine/board.c:1950:25: error: use of undeclared identifier 'byte_9B388C'
v10 = ( unsigned __int8)byte_9B388C[( _QWORD)v5]; 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/fastlib/src/engine/board.c:1976:25: error: use of undeclared identifier 'byte_9B388C'
v10 = ( unsigned __int8)byte_9B388C[( _QWORD)v5]; 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/fastlib/src/engine/board.c:2023:24: error: use of undeclared identifier 'byte_9B389E'
&& ( ( unsigned __int8)byte_9B389E[( _QWORD)v5] != color || string[239].neighborlist[( _QWORD)v5 + 159] != v7) 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/fastlib/src/engine/board.c:2032:24: error: use of undeclared identifier 'byte_9B388D'
&& ( ( unsigned __int8)byte_9B388D[( _QWORD)v5] != color || string[239].neighborlist[( _QWORD)v5 + 142] != v7) 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/fastlib/src/engine/board.c:2040:24: error: use of undeclared identifier 'byte_9B388D'
&& ( ( unsigned __int8)byte_9B388D[( _QWORD)v5] != color || string[239].neighborlist[( _QWORD)v5 + 142] != v7) ) 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/fastlib/src/engine/board.c:2070:25: error: use of undeclared identifier 'byte_9B389E'
v22 = ( unsigned __int8)byte_9B389E[( _QWORD)v5]; 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/fastlib/src/engine/board.c:2092:25: error: use of undeclared identifier 'byte_9B388D'
v26 = ( unsigned __int8)byte_9B388D[( _QWORD)v5]; 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/fastlib/src/engine/board.c:2114:25: error: use of undeclared identifier 'byte_9B388D'
v30 = ( unsigned __int8)byte_9B388D[( _QWORD)v5]; 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/fastlib/src/engine/board.c:2132:24: error: use of undeclared identifier 'byte_9B389F'
v8 = ( unsigned __int8)byte_9B389F[pos]; 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/fastlib/src/engine/board.c:2135:25: error: use of undeclared identifier 'byte_9B388C'
v10 = ( unsigned __int8)byte_9B388C[( _QWORD)v5]; 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/fastlib/src/engine/board.c:2149:25: error: use of undeclared identifier 'byte_9B388C'
v10 = ( unsigned __int8)byte_9B388C[( _QWORD)v5]; 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/fastlib/src/engine/board.c:2185:24: error: use of undeclared identifier 'byte_9B389F'
&& ( ( unsigned __int8)byte_9B389F[( _QWORD)v35] != color || string[239].neighborlist[( _QWORD)v35 + 160] != v7) 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/fastlib/src/engine/board.c:2186:24: error: use of undeclared identifier 'byte_9B388C'
&& ( ( unsigned __int8)byte_9B388C[( _QWORD)v35] != color || string[239].neighborlist[( _QWORD)v35 + 141] != v7) 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/fastlib/src/engine/board.c:2190:24: error: use of undeclared identifier 'byte_9B389F'
&& ( ( unsigned __int8)byte_9B389F[( _QWORD)v35] != color || string[239].neighborlist[( _QWORD)v35 + 160] != v9) 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/fastlib/src/engine/board.c:2191:24: error: use of undeclared identifier 'byte_9B388C'
&& ( ( unsigned __int8)byte_9B388C[( _QWORD)v35] != color || string[239].neighborlist[( _QWORD)v35 + 141] != v9) 
                       ^
16 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/fastlib/src/obj/1/board.o] Error 1
